tests/js_error/source_locations/expression/binary/greater_than.exp
TypeError: symbol cannot be converted to number
  ┌ tests/js_error/source_locations/expression/binary/greater_than.js:1:3
  |
1 | 1 > Symbol.iterator
  |   ^
Stack trace:
  at <global> (tests/js_error/source_locations/expression/binary/greater_than.js:1:3)